--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -1,10 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScanActivity"
-    >
+    tools:context=".ScanActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/header_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Scanner"
+        android:textSize="32dp"
+        android:textAlignment="center"
+        android:layout_marginTop="20dp"
+        />
+    <TextView
+        android:id="@+id/welcome_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Welcome"
+        android:textSize="24dp"
+        android:layout_below="@+id/header_text"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="20dp"
+        />
+    <TextView
+        android:id="@+id/user_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="user"
+        android:textSize="24dp"
+        android:layout_below="@+id/header_text"
+        android:gravity="right"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="20dp"
+        />
+    <ImageView
+        android:id="@+id/scanner_img"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/ic_baseline_qr_code_scanner_24"
+        android:layout_below="@+id/welcome_text"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="170dp"
+        />
+    <Button
+        android:id="@+id/scan_button"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Scan QR Code"
+        android:layout_marginLeft="300dp"
+        android:layout_below="@+id/scanner_img"
+
+        />
+    <Button
+        android:id="@+id/routes_button"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="View Routes"
+        android:layout_marginLeft="300dp"
+        android:layout_below="@+id/scan_button"
+        />
+    <DigitalClock
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:gravity="center"
+        android:layout_below="@+id/routes_button"
+        android:layout_marginTop="450dp"
+        />
+
+</RelativeLayout>
