--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,8 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Theme.BajajJHAndPM1" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    </style>
 
 
 </resources>
