--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScanActivity">
+    tools:context=".ScanActivity"
+    android:gravity="center_horizontal">
 
     <TextView
         android:id="@+id/header_text"
@@ -13,7 +14,7 @@
         android:text="Scanner"
         android:textSize="32dp"
         android:textAlignment="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         />
     <TextView
         android:id="@+id/welcome_text"
@@ -39,11 +40,11 @@
     <ImageView
         android:id="@+id/scanner_img"
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
         android:src="@drawable/ic_baseline_qr_code_scanner_24"
-        android:layout_below="@+id/welcome_text"
-        android:layout_marginLeft="300dp"
-        android:layout_marginTop="170dp"
+        android:layout_below="@+id/header_text"
+        android:layout_marginTop="150dp"
+        android:layout_centerHorizontal="true"
         />
     <Button
         android:id="@+id/scan_button"
@@ -51,9 +52,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Scan QR Code"
-        android:layout_marginLeft="300dp"
         android:layout_below="@+id/scanner_img"
-
+        android:layout_centerHorizontal="true"
         />
     <Button
         android:id="@+id/routes_button"
@@ -61,8 +61,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="View Routes"
-        android:layout_marginLeft="300dp"
         android:layout_below="@+id/scan_button"
+        android:layout_centerHorizontal="true"
         />
     <DigitalClock
         android:layout_width="fill_parent"
@@ -70,7 +70,7 @@
         android:textSize="25dp"
         android:gravity="center"
         android:layout_below="@+id/routes_button"
-        android:layout_marginTop="450dp"
-        />
+        android:layout_alignParentBottom="true"
+       />
 
 </RelativeLayout>
